package pt.ipp.isep.dei.esoft.project.application.controller;

public class CreateCollaboratorController {
}
